cargo-nextest/src/snapshots/cargo_nextest__errors__tests__multiple_features.snap
---
source: cargo-nextest/src/errors.rs
expression: "format_experimental_features_not_enabled(&config_file,\n&[ConfigExperimental::Benchmarks, ConfigExperimental::SetupScripts,], &plain,)"
---
experimental features not enabled: benchmarks, setup-scripts
(hint: add to the experimental list in .config/nextest.toml)
