cargo-nextest/src/snapshots/cargo_nextest__errors__tests__single_with_env_var.snap
---
source: cargo-nextest/src/errors.rs
expression: "format_experimental_features_not_enabled(&config_file,\n&[ConfigExperimental::Benchmarks], &plain,)"
---
experimental feature not enabled: benchmarks
(hint: add to the experimental list in .config/nextest.toml, or set NEXTEST_EXPERIMENTAL_BENCHMARKS=1)
