cargo-nextest/src/snapshots/cargo_nextest__errors__tests__single_without_env_var.snap
---
source: cargo-nextest/src/errors.rs
expression: "format_experimental_features_not_enabled(&config_file,\n&[ConfigExperimental::SetupScripts], &plain,)"
---
experimental feature not enabled: setup-scripts
(hint: add to the experimental list in .config/nextest.toml)
